# libraop-min

./: .gitmodules  CMakeLists.txt
src/: cliraop.c  log.c  raop_client.h  rtsp_client.h
src/pthread_wrapper/: pthread.cpp  pthread.h
